# EntityBlockingBySimilarityJoins

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_debug.sh  requirements.txt
cpp/: Doxyfile
cpp/blocker/: CMakeLists.txt  block.cc  block.h  block_main.cc  blocker_config.cc  blocker_config.h  blocker_util.cc  blocker_util.h  knn_blocker.cc  knn_blocker.h  simjoin_blocker.cc  simjoin_blocker.h
cpp/common/: bpe_tokenizer.cc  bpe_tokenizer.h  config.h  dataframe.cc  dataframe.h  index.h  io.cc  io.h  joinutil.cc  joinutil.h  ovlpjoin.cc  ovlpjoin.h  ovlpjoin_parallel.cc  ovlpjoin_parallel.h  setjoin.cc  setjoin.h  setjoin_parallel.cc  setjoin_parallel.h  simfunc.cc  simfunc.h  stringjoin.cc  stringjoin.h  stringjoin_parallel.cc  stringjoin_parallel.h  tokenizer.cc  tokenizer.h  type.h
cpp/feature/: CMakeLists.txt  cal_feature.cc  cal_feature.h  feature.cc  feature.h  feature_index.cc  feature_index.h  feature_main.cc  feature_utils.cc  feature_utils.h
cpp/group/: CMakeLists.txt  cluster.h  graph.cc  graph.h  group.cc  group.h  group_main.cc  group_old.h
cpp/sampler/: CMakeLists.txt  base_sampler.h  down_sampler.h  jaccard_sampler.h  overlap_sampler.h  sample.cc  sample.h  sample_main.cc  sampler_impl.cc  sampler_util.cc  sampler_util.h
cpp/topk/: topk.cc  topk.h
docs/: TODO.md  developer_notes.md  exp.md  modifications.md  simjoin.md
patch/: py_em.patch
scripts/: block.sh  clean_blktmp.sh  dump_tables.py  feature.sh  group.sh  sample.sh
simjoin_entitymatching/: __init__.py
simjoin_entitymatching/blocker/: block.py  extract_formula.py  graph.py
simjoin_entitymatching/blocker/rules/: additional_rules_amazon_google_structured1.txt  additional_rules_amazon_google_structured2.txt  additional_rules_amazon_google_structured3.txt  rules_amazon_google_dirty1.txt  rules_amazon_google_dirty2.txt  rules_amazon_google_dirty3.txt  rules_amazon_google_structured1.txt  rules_amazon_google_structured2.txt  rules_amazon_google_structured3.txt  rules_amazon_google_textual1.txt  rules_amazon_google_textual2.txt  rules_amazon_google_textual3.txt  rules_dblp_acm_dirty1.txt  rules_dblp_acm_dirty2.txt  rules_dblp_acm_dirty3.txt  rules_dblp_acm_structured1.txt  rules_dblp_acm_structured2.txt  rules_dblp_acm_structured3.txt  rules_dblp_googlescholar_dirty1.txt  rules_dblp_googlescholar_dirty2.txt  rules_dblp_googlescholar_dirty3.txt  rules_dblp_googlescholar_structured1.txt  rules_dblp_googlescholar_structured2.txt  rules_dblp_googlescholar_structured3.txt  rules_secret_11.txt  rules_secret_12.txt  rules_secret_13.txt  rules_secret_21.txt  rules_secret_22.txt  rules_secret_23.txt  rules_walmart_amazon_dirty1.txt  rules_walmart_amazon_dirty2.txt  rules_walmart_amazon_dirty3.txt  rules_walmart_amazon_structured3.txt  rules_walmart_amazon_textual1.txt
simjoin_entitymatching/feature/: feature.py  feature_base.py
simjoin_entitymatching/matcher/: deep_matcher.py  match.py  match_exp.py  random_forest.py  search.py  zero_er.py
simjoin_entitymatching/matcher/model/: rf_amazon_google_dirty1.joblib  rf_amazon_google_dirty2.joblib  rf_amazon_google_dirty3.joblib  rf_amazon_google_structured1.joblib  rf_amazon_google_structured2.joblib  rf_amazon_google_structured3.joblib  rf_amazon_google_structured_1.joblib
simjoin_entitymatching/matcher/model/ranges/: ranges_amazon_google_dirty1.txt  ranges_amazon_google_dirty2.txt  ranges_amazon_google_dirty3.txt
simjoin_entitymatching/matcher/model/trees/: trees_amazon_google_dirty1.txt  trees_amazon_google_dirty2.txt  trees_amazon_google_dirty3.txt  trees_amazon_google_structured1.txt  trees_amazon_google_structured2.txt  trees_amazon_google_structured3.txt  trees_amazon_google_structured_1.txt
simjoin_entitymatching/matcher/zero_er/: feature.py  feature_extract.py  model.py
simjoin_entitymatching/sampler/: sample.py
simjoin_entitymatching/utils/: datasets.py  path_helper.py  semantic_check.ipynb  utils.py  visualize.ipynb  visualize.py  visualize_helper.py
simjoin_entitymatching/value_matcher/: __init__.py  doc2vec.py  fasttext.py  glove.py  group.py  interchangeable.py  utils.py  word2vec.py
simjoin_entitymatching/value_matcher/cosine/: cosine  cosine.cpp
simjoin_entitymatching/value_matcher/model/: doc2vec.joblib  doc2vec_manufacturer.joblib  doc2vec_title.joblib
test/: CMakeLists.txt  test_block.py  test_block_all.py  test_feature.py  test_join.sh  test_match.py  test_ovlpjoin.cc  test_sample.py  test_setjoin.cc  test_stringjoin.cc
test/debug/: apply_diff_fea_vec.py  debug_utils.py  diff_fea_vec  diff_fea_vec.cc  diff_fea_vec.py  false_neg.csv  get_true_pos.py  run_diff_fea.sh  true_pos.csv  vis_rf_path.py
test/exp/: amazon_google.py  dblp_acm.py  dblp_googlescholar.py  debug.sh  eval.sh  exp_utils.py  utils.py  walmart_amazon.py
test/tmp/: rf_amazon_google_structured.joblib  rules_amazon_google_structured1.txt  trees_amazon_google_structured.txt
